# portfolio

./: .gitattributes  .gitignore  LICENSE  README.md  project.md
.claude/: launch.json
portfolio-backend/: Cargo.toml  README.md
portfolio-backend/src/: main.rs  models.rs  routes.rs
portfolio-backend/src/data/: projects.json
portfolio-frontend/: .env.example  README.md  eslint.config.js  netlify.toml  package-lock.json  package.json  svelte.config.js  vercel.json
portfolio-frontend/src/: app.html
portfolio-frontend/src/lib/: types.ts
portfolio-frontend/src/lib/components/: BackgroundAnimations.svelte  MouseTrail.svelte  ProjectCard.svelte
portfolio-frontend/src/lib/data/: projects.json
portfolio-frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
