[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tower-http = { version = "0.5.2", features = ["cors"] }
